==> zephyrproject-rtos/zephyr/drivers/usb/device/usb_dc_gd32.c <==
#include <soc.h>
#include <string.h>
#include <zephyr/kernel.h>
#include <zephyr/usb/usb_device.h>
#include <zephyr/sys/util.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/pinctrl.h>
#define LOG_LEVEL CONFIG_USB_DRIVER_LOG_LEVEL
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#include "drv_usb_core.h"
#include "drv_usb_dev.h"
#include "drv_usbd_int.h"
#define DT_DRV_COMPAT    gd_gd32_otghs
#define USB_IRQ_NAME     otghs
#define USB_VBUS_SENSING (DT_NODE_EXISTS(DT_CHILD(DT_NODELABEL(pinctrl), usb_otg_hs_vbus_pa9)) || \
			  DT_NODE_EXISTS(DT_CHILD(DT_NODELABEL(pinctrl), usb_otg_hs_vbus_pb13)))
#define DT_DRV_COMPAT    gd_gd32_otgfs
#define USB_IRQ_NAME     otgfs
#define USB_VBUS_SENSING DT_NODE_EXISTS(DT_CHILD(DT_NODELABEL(pinctrl), usb_otg_fs_vbus_pa9))
#define DT_DRV_COMPAT    gd_gd32_usb
#define USB_IRQ_NAME     usb
#define USB_VBUS_SENSING false
#define USB_BASE_ADDRESS		DT_INST_REG_ADDR(0)
#define USB_IRQ					DT_INST_IRQ_BY_NAME(0, USB_IRQ_NAME, irq)
#define USB_IRQ_PRI				DT_INST_IRQ_BY_NAME(0, USB_IRQ_NAME, priority)
#define USB_NUM_BIDIR_ENDPOINTS	DT_INST_PROP(0, num_bidir_endpoints)
#define USB_RAM_SIZE			DT_INST_PROP(0, ram_size)
#define EP_MPS USBHS_MAX_PACKET_SIZE
#define EP_MPS USBFS_MAX_PACKET_SIZE
#define EP0_IDX 0
#define EP0_MPS USB_CONTROL_EP_MPS
#define SETUP_SIZE 8

int usb_dc_attach(void)
{
	int ret;

	LOG_DBG("");

	ret = usb_dc_gd32_clock_enable();
	if (ret) {
		return ret;
	}

	ret = usb_dc_gd32_init();
	if (ret) {
		return ret;
	}

	return 0;
}

int usb_dc_ep_set_callback(const uint8_t ep_addr, const usb_dc_ep_callback cb)
{
	LOG_DBG("ep_addr 0x%02x", ep_addr);

	uint8_t for_in = USB_EP_GET_DIR(ep_addr);
	uint8_t ep_idx = USB_EP_GET_IDX(ep_addr);

	if (ep_idx >= USB_NUM_BIDIR_ENDPOINTS) {
		LOG_ERR("endpoint index/address out of range");
		return -1;
	}

	usb_device_st.cb[for_in ? 1 : 0][ep_idx] = cb;

	return 0;
}

int usb_dc_set_address(const uint8_t addr)
{
	LOG_DBG("addr %u (0x%02x)", addr, addr);
	
	usb_devaddr_set(&usb_device_st.usb_driver_st, addr);
	return 0;
}

int usb_dc_ep_configure(const struct usb_dc_ep_cfg_data * const ep_cfg)
{

    uint8_t ep_addr = ep_cfg->ep_addr;
    uint16_t max_len = ep_cfg->ep_mps;
    usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);

	if (!transc) {
		return -EINVAL;
	}

    transc->ep_addr.num = EP_ID(ep_addr);
    transc->max_len = max_len;

	switch (ep_cfg->ep_type) {
	case USB_DC_EP_CONTROL:
		transc->ep_type = USB_EPTYPE_CTRL;
		break;
	case USB_DC_EP_ISOCHRONOUS:
		transc->ep_type = USB_EPTYPE_ISOC;
		break;
	case USB_DC_EP_BULK:
		transc->ep_type = USB_EPTYPE_BULK;
		break;
	case USB_DC_EP_INTERRUPT:
		transc->ep_type = USB_EPTYPE_INTR;
		break;
	default:
		return -EINVAL;
	}

 	LOG_DBG("ep_addr 0x%02x, previous ep_mps %u, ep_mps %u, ep_type %u",
		ep_cfg->ep_addr, transc->max_len, ep_cfg->ep_mps,
		ep_cfg->ep_type);

   /* active USB endpoint function */
    (void)usb_transc_active (&usb_device_st.usb_driver_st, transc);

	return 0;
}

int usb_dc_ep_set_stall(const uint8_t ep_addr)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);

	if (!transc) {
		return -EINVAL;
	}

    transc->ep_stall = 1U;

    (void)usb_transc_stall (&usb_device_st.usb_driver_st, transc);

    return (0U);
}

int usb_dc_ep_clear_stall(const uint8_t ep_addr)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);

	if (!transc) {
		return -EINVAL;
	}

    transc->ep_stall = 0U;

    (void)usb_transc_clrstall (&usb_device_st.usb_driver_st, transc);

    return (0U);
}

int usb_dc_ep_is_stalled(const uint8_t ep_addr, uint8_t *const stalled)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);

	LOG_DBG("ep_addr 0x%02x", ep_addr);

	if (!transc || !stalled) {
		return -EINVAL;
	}

	*stalled = transc->ep_stall;

	return 0;
}

int usb_dc_ep_enable(const uint8_t ep_addr)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);
	usb_status status;

	LOG_DBG("ep_addr 0x%02x", ep_addr);

	if (!transc) {
		return -EINVAL;
	}

	LOG_DBG("usb_transc_active(0x%02x, %u, %u)", ep_addr, transc->max_len,
		transc->ep_type);

	status = usb_transc_active(&usb_device_st.usb_driver_st, transc);
	if (status != USB_OK) {
		LOG_ERR("usb_transc_active failed(0x%02x), %d", ep_addr, (int)status);
		return -EIO;
	}

	if (USB_EP_DIR_IS_OUT(ep_addr) && ep_addr != EP0_OUT) {
		return usb_dc_ep_start_read(ep_addr, usb_device_st.ep_buf[USB_EP_GET_IDX(ep_addr)], EP_MPS);
	}

	return 0;
}

int usb_dc_ep_disable(const uint8_t ep_addr)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);
	usb_status status;

	LOG_DBG("ep_addr 0x%02x", ep_addr);

	if (!transc) {
		return -EINVAL;
	}

	status = usb_transc_deactivate(&usb_device_st.usb_driver_st, transc);
	if (status != USB_OK) {
		LOG_ERR("usb_transc_deactivate failed(0x%02x), %d", ep_addr,
			(int)status);
		return -EIO;
	}

	return 0;
}

int usb_dc_ep_write(const uint8_t ep_addr, const uint8_t *const data,
		    const uint32_t data_len, uint32_t * const ret_bytes)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);
	usb_status status;
	uint32_t len = data_len;
	int ret = 0;

	LOG_DBG("ep_addr 0x%02x, len %u", ep_addr, data_len);

	if (!transc || !USB_EP_DIR_IS_IN(ep_addr)) {
		LOG_ERR("invalid ep_addr 0x%02x", ep_addr);
		return -EINVAL;
	}

	if (!k_is_in_isr()) {
		irq_disable(USBFS_IRQn);
	}

	if (ep_addr == EP0_IN && len > USB_MAX_CTRL_MPS) {
		len = USB_MAX_CTRL_MPS;
	}

	status = usb_dc_ep_send(&usb_device_st.usb_driver_st, ep_addr, (void *)data, len);
	if (status != USB_OK) {
		LOG_ERR("c failed(0x%02x), %d", ep_addr, (int)status);
		ret = -EIO;
	}
	
	if (!ret && ep_addr == EP0_IN && len > 0) {
		/* Wait for an empty package as from the host.
		 * This also flushes the TX FIFO to the host.
		 */
		usb_dc_ep_start_read(ep_addr, NULL, 0);
	}

	if (!k_is_in_isr()) {
		irq_enable(USBFS_IRQn);
	}

	if (!ret && ret_bytes) {
		*ret_bytes = len;
	}

	return ret;
}

int usb_dc_ep_read_wait(uint8_t ep_addr, uint8_t *data, uint32_t max_data_len,
			uint32_t *read_bytes)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);
	uint32_t read_count, offset;
	

	if (!transc) {
		LOG_ERR("Invalid Endpoint %x", ep_addr);
		return -EINVAL;
	}

	read_count = transc->xfer_count;
	offset = usb_device_st.read_offset[USB_EP_GET_IDX(ep_addr)];

	LOG_DBG("ep_addr 0x%02x, %u bytes, %u+%u, %p", ep_addr, max_data_len,
		offset, read_count, data);

	if (!USB_EP_DIR_IS_OUT(ep_addr)) { /* check if OUT ep_addr */
		LOG_ERR("Wrong endpoint direction: 0x%02x", ep_addr);
		return -EINVAL;
	}

	/* When both buffer and max data to read are zero, just ignore reading
	 * and return available data in buffer. Otherwise, return data
	 * previously stored in the buffer.
	 */
	if (data) {
		read_count = MIN(read_count, max_data_len);
		memcpy(data, usb_device_st.ep_buf[USB_EP_GET_IDX(ep_addr)] + offset, read_count);
		transc->xfer_count -= read_count;
		offset += read_count;
		LOG_HEXDUMP_DBG(usb_device_st.ep_buf[USB_EP_GET_IDX(ep_addr)],  read_count, "ep_buf");
	} else if (max_data_len) {
		LOG_ERR("Wrong arguments");
	}

	if (read_bytes) {
		*read_bytes = read_count;
	}

	return 0;
}

int usb_dc_ep_read_continue(uint8_t ep_addr)
{
    usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);

	if (!transc || !USB_EP_DIR_IS_OUT(ep_addr)) { /* Check if OUT ep_addr */
		LOG_ERR("Not valid endpoint: %02x", ep_addr);
		return -EINVAL;
	}

	/* If no more data in the buffer, start a new read transaction.
	 * DataOutStageCallback will called on transaction complete.
	 */
	if (!transc->xfer_count) {
		usb_dc_ep_start_read(ep_addr, usb_device_st.ep_buf[USB_EP_GET_IDX(ep_addr)], EP_MPS);
	}

	return 0;
}

int usb_dc_ep_flush(const uint8_t ep_addr)
{
    if (EP_DIR(ep_addr)) {
        (void)usb_txfifo_flush (&usb_device_st.usb_driver_st.regs, EP_ID(ep_addr));
    } else {
        (void)usb_rxfifo_flush (&usb_device_st.usb_driver_st.regs);
    }

    return (0U);
}

int usb_dc_ep_mps(const uint8_t ep_addr)
{
	usb_transc *transc = usb_dc_gd32_get_ep_transc(ep_addr);

	if (!transc) {
		return -EINVAL;
	}

	return transc->max_len;
}
